// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > renders NameWithAddress with default props 1`] = `
<div>
  <div
    class="ml-4 flex w-fit items-center justify-start"
    data-testid="name-with-address"
    id="name-with-address"
  >
    <div
      class="flex flex-col items-start"
    >
      <div
        class="flex w-fit min-w-[150px] items-center gap-1"
      >
        <div
          class=" text-sm font-normal"
          data-testid="text"
        >
          
        </div>
         
        <button />
      </div>
    </div>
  </div>
</div>
`;

exports[`Text > renders PageTitle with default props 1`] = `
<div>
  <div
    class="mb-8 flex items-center gap-4"
    data-testid="page-title"
  >
     
    <div
      class="font-poppins leading-[-2px] text-grey-800 text-3xl font-medium"
      data-testid="text"
    >
      
    </div>
     
  </div>
</div>
`;

exports[`Text > renders TableHeadingText with default props 1`] = `
<div>
  <div
    class="mt-0.5 flex flex-nowrap items-center justify-start gap-1 text-center text-[14px] font-normal text-grey-800"
    data-testid="table-heading-text"
  >
    <div
      class="relative flex items-center gap-1"
    >
      <span
        class="w-fit tracking-widest"
      >
        
      </span>
       
    </div>
  </div>
</div>
`;

exports[`Text > renders TextInputCard with default props 1`] = `
<div>
  <div
    class="w-full relative border border-grey-100 bg-base-100 py-2.5 px-4 rounded-full"
    data-testid="input-card"
  >
    <div
      class="mb-1 flex items-center gap-1"
    >
      <div
        class="absolute left-7 top-[-1px] z-[1] inline-flex bg-base-100 font-poppins text-sm font-normal leading-[1px] text-grey-800 text-sm font-normal"
        data-testid="text"
      >
        
      </div>
       
    </div>
     
    <div
      class="flex"
    >
      <div
        class="flex py-[3px] text-base font-normal"
        data-testid="text"
      >
        
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Text > renders TxnHashText with default props 1`] = `
<div>
  <div
    class="flex items-center justify-start gap-2"
    data-testid="txn-hash-text"
  >
    
     
    <a
      class="shrink-0"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="txn link"
        src="/images/openinnew.svg"
        width="13px"
      />
    </a>
  </div>
</div>
`;
